[gd_scene load_steps=12 format=3 uid="uid://dygyux7f2ntky"]

[ext_resource type="Script" uid="uid://b8hoyjs4em3nf" path="res://Scripts/enemy_robot.gd" id="1_28r5x"]
[ext_resource type="Texture2D" uid="uid://cpjp6sbwsat2o" path="res://Sprites/robot.png" id="2_h0tpn"]
[ext_resource type="Texture2D" uid="uid://depm702hxsrt2" path="res://Sprites/light.png" id="3_h0tpn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h0tpn"]
radius = 10.0499

[sub_resource type="AtlasTexture" id="AtlasTexture_45k6c"]
atlas = ExtResource("2_h0tpn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqsoq"]
atlas = ExtResource("2_h0tpn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg7xv"]
atlas = ExtResource("2_h0tpn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3q7bq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45k6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqsoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg7xv")
}],
"loop": true,
"name": &"Robot idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45k6c"]
size = Vector2(31, 21)

[sub_resource type="CircleShape2D" id="CircleShape2D_45k6c"]
radius = 416.308

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_h0tpn"]
properties/0/path = NodePath(".:health")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:damagecount")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:enemy_id")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:color")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:is_invincible")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:invincibility_time")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("AnimatedSprite2D:animation")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("AnimatedSprite2D:frame")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("PointLight2D:color")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath(".:visible")
properties/9/spawn = true
properties/9/replication_mode = 1

[node name="enemy_robot" type="CharacterBody2D" groups=["Persistent", "enemy"]]
script = ExtResource("1_28r5x")
color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h0tpn")

[node name="bulletpos" type="Node2D" parent="."]

[node name="bulletspawn" type="Marker2D" parent="bulletpos"]
position = Vector2(40, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_3q7bq")
animation = &"Robot idle"
autoplay = "Robot idle"

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0, 0, 1)
range_layer_min = -100
texture = ExtResource("3_h0tpn")
texture_scale = 0.5

[node name="Timer" type="Timer" parent="."]

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(3.8147e-06, -3.8147e-06)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(1.5, 0.500004)
shape = SubResource("RectangleShape2D_45k6c")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_45k6c")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_h0tpn")

[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
